[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Healthbar-black.png" type="Texture" id=1]
[ext_resource path="res://Assets/Healthbar-over.png" type="Texture" id=2]
[ext_resource path="res://Assets/Healthbar-progress.png" type="Texture" id=3]
[ext_resource path="res://Scripts/HealthBar.gd" type="Script" id=4]

[node name="HealthBar" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="HealthUnder" type="TextureProgress" parent="."]
margin_right = 40.0
margin_bottom = 40.0
value = 100.0
texture_under = ExtResource( 1 )
texture_progress = ExtResource( 3 )
tint_progress = Color( 1, 0, 0, 1 )

[node name="HealthOver" type="TextureProgress" parent="."]
margin_right = 40.0
margin_bottom = 40.0
value = 100.0
texture_over = ExtResource( 2 )
texture_progress = ExtResource( 3 )
tint_progress = Color( 0.14902, 1, 0, 1 )

[node name="UpdateTween" type="Tween" parent="."]

[node name="PulseTween" type="Tween" parent="."]
repeat = true
playback/repeat = true

[node name="FlashTween" type="Tween" parent="."]
